(chores) camel-aws: use unmodifiable list when possible